        - Fixed directory redirections in DirectoryResource class.
        - Fixed NPE in RestletFrameworkServlet. Reported by Yuri de Wit
          and fixed by Rhett Sutphin.
        - Fixed socket closing issues with the internal HTTP connectors.
          Reported and fixed by Kevin Conaway.
        - Fixed potential NPE in CLAP connector. Reported by Rob 
          Heittman. 
    - API Enhancements
        - Made the org.restlet.util.Resolver generic and used it in 
          Guard to allow the user to provide a secret resolver without
          needing to subclass Guard.
        - DomRepresentation.getDocument() new creates a new empty 
          document if no document is available or can't be parsed.
        - Reference class now enforces the usage of valid URI 
          characters only. Suggested by Avi Flax.
        - Static methods added to Reference: isGenericDelimiter(char),
          isReserved(char), isSubDelimiter(char), isUnreserved(char)
          and isValid(char).   
        - DomRepresentation now has a protected createTransformer()
          method that can be overridden to customize the properties of
          the JAXP Transformer. Contributed by Rob Heittman.
        - All getters in Reference returning URI encoded string now
          have an additional method taking a 'decode' parameter. 
          Suggested by Paul J. Lucas.
        - TransformRepresentation can now be reused multiple times by 
          multiple threads in parallel. Contributed by Marc Portier.
        - Parameters and output properties can now be set on the 
          TransformRepresentation and are automatically passed to the 
          created JAXP Transformers. Suggested by Marc Portier and
          Joe Nellis.
        - Added new constructors to TransformRepresentation making the
          creation of the internal URI resolver optional and allowing
          to pass a JAXP Templates precompiled instance directly.
          Suggested by Joe Nellis. 